# fm_analise_de_dados

./: .coverage  .gitignore  FM playable league reputations.xlsx  Italia_2024.html  data.xlsx  data_manipulation.py  data_preprocessing.py  dataview.ipynb  fm_analycts_parametrs.py  fm_estatistica.db  foggia_2024.html  italia_novo_2024.html  liga.html  ligas.json  ligas2.json  ligas_base.xlsx  ligashandle.py  observacoes.txt  pyproject.toml  requirements.txt  sql_manager.ipynb  teste_2024.html  teste_json.py  ~$FM playable league reputations.xlsx
data/: BTK_2024.html  BTK_SERIEC_2024.html  FM playable league reputations.xlsx  SERIEC_2024.html  esp_ligas.html  ligas.xlsx
data/db/: data.db
data/raw/Divisoes/: Alemanha_2024.html  Alemanha_2025.html  Alemanha_2026.html  Alemanha_2027.html  Alemanha_2028.html  Argentina_2023.html  Argentina_2024.html  Argentina_2025.html  Argentina_2026.html  Argentina_2027.html  Brasil_2023.html  Brasil_2024.html  Brasil_2025.html  Brasil_2026.html  Brasil_2027.html  Espanha_2024.html  Espanha_2025.html  Espanha_2026.html  Espanha_2027.html  Espanha_2028.html  Franca_2024.html  Franca_2025.html  (+18 more)
tests/: test_convert_str_to_numeric.py  test_fm_normalize_estimated_values.py  test_normalize_minutes_values.py  test_normalize_wage_values.py  test_remove_percent_symbol_from_values.py  test_split_max_min_estimated_values.py  test_unabbreviate_numeric_values.py
utils/: __init__.py  data_manipulation.py  data_preprocessing.py  db_utils.py  debuger.py  files_error_handling.py  files_utils.py  filters_utils.py  paths.py  tables_utils.py
