[project]
name = "fm-analise-de-dados"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asttokens==3.0.0",
    "beautifulsoup4==4.14.2",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "fonttools==4.60.1",
    "html5lib==1.1",
    "ipykernel==7.0.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "lxml==6.0.2",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numpy==2.3.4",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "six==1.17.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "unidecode==1.4.0",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
]
